说明文档的整理

--- a/README.adoc
+++ b/README.adoc
@@ -121,7 +121,7 @@ item以position:relative布局,
 
 == 优化历程
 
-* 一开始我是以思考效果, 做出效果的逻辑, 并挂靠在jQuery.prototype
+* 一开始我是以效果为主导来写组件, 组件挂靠在jQuery.prototype对象里.
 * 升阶历程
     ** 应该从使用者的角度触发去思考, 以提供什么api为开始
     ** 组件的不应该以效果为主导, 应该以逻辑为主导
