--- a/README.adoc
+++ b/README.adoc
@@ -121,28 +121,46 @@ item以position:relative布局,
 
 == 优化历程
 
-* 一开始我是以效果为主导来写组件, 组件挂靠在jQuery.prototype对象里.
-* 升阶历程
-    ** 应该从使用者的角度触发去思考, 以提供什么api为开始
-    ** 组件的不应该以效果为主导, 应该以逻辑为主导
-    ** 一开始我选择了多种实现方式, position:relative与absolute都有做, 后来选择absolute, 完全清理relative, 理由是项目是移动端就不考虑低端浏览器
-    ** 审查代码, 去掉多余的代码, 简洁 // 这一步其实每一步都有做
-    ** 类, 已实例对象来使用, 提高代码复用性
-    ** 变量命名, 更加的语义化, 私有变量使用下划线开头
-    ** 思考设计错误:
-        *** 拖拽的item应该就是原item, 不用复制副本作为拖拽的对象
-    ** 减少变量, 能不用的变量尽量废除
-        *** 统一touchItem, dragItem, reorderItem都为$target变量
-        *** 研究status应用: 没有需要保留的状态, 使用$editingItem的有无表示isEditing
-        *** 不使用ghostItem, 暂时没有需要
-    ** 使用css3提供动画性能, 使用rAF来提供渲染性能
-    ** css3的兼容问题, 我再写一个可以复用的cssProp组件来处理, 之后使用其的api来执行动画就好了
-        *** cssProp在页面初始化时检测移动端的兼容前缀: touchstart, -webkit等等, 选择transform方法的兼容方法
-        *** 取代本组件原方法_applyTransition/ _disableTransition/ _setPosition/ _setProps/ _page
-    ** 解耦方法, 更好的阅读性
-        *** 分离UiTarget作为一个方法集合, 用于负责items的定位, 重排, 获取视觉位置的方法集合
-        *** 分离UiItems作为一个方法集合, 用于负责拖拽对象的拖拽定位, 放大, 归位等等的方法集合
-    ** 使用新方法transitionEnd的方法
+一开始我是以效果为主导来写组件, 组件挂靠在jQuery.prototype对象里.
+
+=== 升阶历程
+* 应该从使用者的角度触发去思考, 以提供什么api为开始
+* 组件的不应该以效果为主导, 应该以逻辑为主导
+* 一开始我选择了多种实现方式, position:relative与absolute都有做, 后来选择absolute, 完全清理relative, 理由是项目是移动端就不考虑低端浏览器
+* 审查代码, 去掉多余的代码, 简洁 // 这一步其实每一步都有做
+* 类, 已实例对象来使用, 提高代码复用性
+* 变量命名, 更加的语义化, 私有变量使用下划线开头
+* 思考设计错误:
+    ** 拖拽的item应该就是原item, 不用复制副本作为拖拽的对象
+* 减少变量, 能不用的变量尽量废除
+    ** 统一touchItem, dragItem, reorderItem都为$target变量
+    ** 研究status应用: 没有需要保留的状态, 使用$editingItem的有无表示isEditing
+    ** 不使用ghostItem, 暂时没有需要
+* 使用css3提供动画性能, 使用rAF来提供渲染性能
+* css3的兼容问题, 我再写一个可以复用的cssProp组件来处理, 之后使用其的api来执行动画就好了
+    ** cssProp在页面初始化时检测移动端的兼容前缀: touchstart, -webkit等等, 选择transform方法的兼容方法
+    ** 取代本组件原方法_applyTransition/ _disableTransition/ _setPosition/ _setProps/ _page
+* 解耦方法, 更好的阅读性
+    ** 分离UiTarget作为一个方法集合, 用于负责items的定位, 重排, 获取视觉位置的方法集合
+    ** 分离UiItems作为一个方法集合, 用于负责拖拽对象的拖拽定位, 放大, 归位等等的方法集合
+* 使用新方法transitionEnd的方法
+
+=== 优化的难点
+* 更好的阅读性, 这是全过程都不断考虑的
+* 方法的解耦, 逻辑与效果
+    ** onTouchMove事件的方法负责ui数据收集
+    ** processHandler方法关注的是逻辑
+        *** 拖拽的权限, 检测
+        *** 负责执行哪些内容,
+            **** 拖拽
+            **** 如何才是触发重排的逻辑计算
+    ** 拖拽的样式操作归一个对象处理
+    ** 重排的样式处理归一个对象处理
+* 简化ui操作触发的事件执行的内容
+* 动画效果的优化
+    ** 绝对定位, 各个item的格子位置存放在缓存里, 方便定位
+    ** css3
+    ** rAF
 
 == 改进空间:
  1. 兼容转屏
